# claude-ide

./: .env.example  .gitignore  CLAUDE.md  Claude_Code_IDE_BUILD_SPEC.md  LICENSE  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_defs.rs  agents.rs  auth.rs  checkpoints.rs  claude_bin.rs  cli_config.rs  commands.rs  engine.rs  error.rs  files.rs  git.rs  lib.rs  main.rs  mcp.rs  memory.rs  perf.rs  permissions.rs  plugins.rs  preflight.rs  pty.rs  search.rs  session_search.rs  sessions.rs  settings.rs  state.rs  tokens.rs  usage.rs  workspace.rs
src/commands/: agentActions.ts  fuzzy.ts  keybindings.ts  registry.ts
src/components/: InlineTerminal.tsx  PerfBadge.tsx  Preflight.tsx  states.tsx
src/editor/: language.ts  monacoSetup.ts  saveTransforms.ts
src/ipc/: commands.ts  types.ts
src/layout/: ActivityBar.tsx  AgentDefsPanel.tsx  AgentsSection.tsx  BottomPanel.tsx  CheatSheet.tsx  CliConfigSection.tsx  CommandPalette.tsx  ConversationPane.tsx  DiffView.tsx  EditorPane.tsx  EditorRegion.tsx  EditorTabs.tsx  EditorToolbar.tsx  FileExplorer.tsx  FuzzyOverlay.tsx  GitPanel.tsx  KeybindingsSection.tsx  PermissionsPanel.tsx  QuickOpen.tsx  ResizeSeparator.tsx  SearchPanel.tsx  SessionsPanel.tsx  SettingsView.tsx  SidePanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalDrawer.tsx  ThemePicker.tsx  UsagePanel.tsx  WorkspaceShell.tsx  useLayoutShortcuts.ts  useSessionBootstrap.ts
src/lib/: shell.ts
src/store/: activeEditorHandle.ts  activeTerminals.ts  app.ts  auth.ts  conversation.ts  editor.ts  editorStatus.ts  effort.ts  git.ts  keybindings.ts  layout.ts  model.ts  overlays.ts  sessions.ts  settings.ts  theme.ts  workspaces.ts  zoom.ts
src/styles/: fonts.css  global.css  tokens.css
