[package]
name = "claude-ide"
version = "0.1.0"
description = "A native, agent-first IDE that wraps the Claude Code CLI"
authors = ["Shaikh Saud <123188975+shaikh-saud705@users.noreply.github.com>"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# cargo quirk: https://github.com/rust-lang/cargo/issues/8519).
name = "claude_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native OS folder picker for "Open Folder…" (Phase 5 multi-workspace). Only the
# directory-open dialog is used; the capability is scoped to that one permission.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Typed error layering (thiserror -> IpcError at the boundary; never panic across IPC).
thiserror = "2"
# Structured backend logging (never logs secrets; see spec 2.6).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Cross-platform process RSS sampling for the Phase 0 perf budget (spec 2.7).
sysinfo = "0.33"
# Robust PATH lookup for the `claude` binary in preflight (spec 3.10).
which = "7"
# Async child I/O for the persistent `claude` session: spawn + piped stdio
# (process), buffered line reads + writes (io-util), the stdin/child mutexes
# (sync), and the close-timeout (time). Tauri already pulls tokio in.
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt"] }
# Cross-platform PTY for the plain-shell terminal drawer (spec 2.3, 5.A.6): a
# real pseudo-terminal so full-screen TUIs, color, and resize work. Linux-first
# but portable (macOS/Windows) per the cross-platform-from-the-start rule.
portable-pty = "0.9"
# Native filesystem watcher (inotify/FSEvents/ReadDirectoryChanges) for the
# Sessions rail (spec 3.2): notice a new `<uuid>.jsonl` (or a new project dir)
# the moment the CLI writes it, so a fresh session appears live — no polling.
notify = "8"
# SHA-256 for the read-only checkpoint timeline (Phase 7 P2): the CLI names each
# file-history snapshot `hex(sha256(absolute_path))[:16]@v<N>`, so we hash a
# file's path to locate its snapshots. Hashing only; we never modify them.
sha2 = "0.10"
# "Reveal in file manager" (Addendum II §S7) — used as a plain library function
# (`reveal_item_in_dir`) from within our own validated command, never
# registered as a plugin or exposed to the webview as its own IPC command, so
# it adds no new capability surface (see `commands::reveal_in_file_manager`).
tauri-plugin-opener = "2"
base64 = "0.22"
